# pykde1d

./: .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
lib/kde1d/: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/kde1d/cmake/: buildTargets.cmake  findDependencies.cmake
lib/kde1d/include/kde1d/: interpolation.hpp  kde1d.hpp  stats.hpp  tools.hpp
lib/kde1d/test/: CMakeLists.txt  test_all.cpp
scripts/: create_boost.sh  mkdocs.py  mkdocs.sh
src/: docstr.hpp  main.cpp
tests/: test.py
